--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mushfiqur-rahman.github.io/htmltoReact/"
   "name": "carwash",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +20,8 @@
     "autoprefixer": "10.4.5"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
