--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mushfiqur-rahman.github.io/htmltoReact/"
+  "homepage": "https://mushfiqur-rahman.github.io/htmltoReact/",
   "name": "carwash",
   "version": "0.1.0",
   "private": true,
